# EAP

./: .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  ISSUE_TEMPLATE.md  README.md  platformio.ini  restropective.txt
doc/: .gitignore  Makefile  carelinktranslation.puml  component-diagram.puml  monitoring.md  monitoring.puml  prediction.puml  profile-breakdown.md  pump-instructor.puml  pump-instructor.puml.txt  pumpcommunication.md  pumpcommunication.puml
doc/design/: Makefile  component-diagram.puml  monitoring.puml  prediction.puml  pumpcommunication.puml
features/: main.cpp  radio.cpp
lib/: CMakeLists.txt
lib/EAP/src/: CMakeLists.txt
lib/EAP/src/communication/protocol/: carelink_configuration.h  carelink_packet.cpp  carelink_packet.h  carelink_translation.h  message_type.h
lib/EAP/src/communication/raw/: iradio.h  packet.h  pump_configuration.h  pump_configuration_reader.cpp  pump_configuration_reader.h  radio.cpp  radio.h  request_packet.cpp  request_packet.h  response_packet.cpp  response_packet.h
lib/EAP/src/communication/raw/validation/: crc.cpp  crc.h
lib/Profile/: profile.cpp  profile.h
lib/Radio/: radio.cpp
lib/communication/protocol/: carelinkConfiguration.h  carelinkTranslation.h  carelink_configuration.h  carelink_translation.h  messageType.h  message_type.h
lib/communication/raw/: iRadio.h  iradio.h  pumpConfiguration.h  pumpConfigurationReader.h  pump_configuration.h  pump_configuration_reader.h  radio.h  requestPacket.h  request_packet.cpp  request_packet.h  responsePacket.h  response_packet.h
lib/communication/raw/validation/: crc.cpp  crc.h
lib/json/: CPPLINT.cfg
lib/profile/: profile.cpp  profile.h  profilebuilder.cpp  profilebuilder.h
lib/profile/basal/: basal.cpp  basal.h  helper.cpp  helper.h  schedule.cpp  schedule.h
lib/profile/targets/: targets.cpp  targets.h
lib/radio/: radio.cpp  radio.h
lib/utilities/: schedule.cpp  schedule.h
lib/validation/: crc.cpp  crc.h
linux/: Makefile  main.cpp
src/: main.cpp
test/: carelink_packet_test.cpp  crc_test.cpp  test-example.cpp  test_basal.cpp  test_crc.cpp  test_requestpacket.cpp
(+2 files in other folders)
